--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
     volumes: 
       - db:/var/lib/postgresql/data
       - ./database/init.sql:/docker-entrypoint-initdb.d/create_tables.sql
+      - ./database/create_patching_system.sql:/docker-entrypoint-initdb.d/create_patching_system.sql
 volumes:
   db:
     driver: local
